# TSDB

./: .gitignore  CMakeLists.txt  README.md  Storage.cpp  Storage.hpp  commands  main.cpp
.github/workflows/: ci.yml
src/: IndexEntry.hpp  Record.hpp  Storage.cpp  Storage.hpp  TSDBCLI.cpp  TSDBCLI.hpp  TSDBHeader.hpp
tests/: TestStorage.cpp  TestTSDBCLI.cpp
